--- a/css/war.css
+++ b/css/war.css
@@ -1,10 +1,24 @@
 * {
   box-sizing: border-box;
+  background-color: #f28260;
 }
 
 body {
   height: 100vh;
   font-family: sans-serif;
+  justify-content: center;
+  display: inline-table;
+}
+
+h1{
+  display: center;
+  align-content: center;
+  justify-content: center;
+  padding: 0vh 0vh 0vh 20vh;
+}
+h2{
+  font-display: center;
+  align-content: center;
 }
 
 .card-container {
@@ -20,58 +34,14 @@ button {
   margin: 10px auto;
   padding: 10px;
   font-size: 16px;
-  color: grey;
-  border: 1px solid grey;
+  color: black;
+  border: 1px solid black;
   border-radius: 4px;
   outline: none;
+  background-color: #dc2525;
 }
 
 button:hover {
   background-color: grey;
   color: white;
 }
-
-/* Dropdown Button */
-.dropbtn {
-  background-color: #3498DB;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-/* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
