--- a/css/war.css
+++ b/css/war.css
@@ -65,11 +65,14 @@ button:hover {
   color: white;
 }
 
+img.card{
+  font-size: 26px;
+}
 
 img {
 	border-radius: 10px; 
 	box-shadow: 3px 3px 3px #222;
-	width: 20%;
+	width: 10%;
   background: #fff;
 }
 
@@ -79,3 +82,4 @@ footer {
 	padding: 10px 0;
 	width: 100%;
 }
+
