--- a/css/war.css
+++ b/css/war.css
@@ -39,14 +39,6 @@ h4{
   padding: 0;
 }
 
-.card-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  border: 4px dotted grey;
-  padding: 10px;
-}
-
 button {
 	border: 0;
 	box-shadow: 3px 3px 3px #222;
@@ -57,7 +49,7 @@ button {
 	margin: 10px auto;
 	padding: 10px 0;
 	width: 170px; 
-  background-color: #dc2525;
+    background-color: #dc2525;
 }
 
 button:hover {
@@ -83,3 +75,22 @@ footer {
 	width: 100%;
 }
 
+
+.warBoard {
+	background: rgba(0,0,0,0.7);
+	height: 60vh;
+	left: 0;
+	line-height: 60vh;
+	position: fixed;
+	top: 10vh;
+	width: 100vw;
+	z-index: 900;
+}
+
+.warBoard div {
+	display: inline-block;
+	margin: 0 20px;
+	max-width: 200px;
+	width: 20%;
+	vertical-align: middle;
+}
